--- a/servico.html
+++ b/servico.html
@@ -61,49 +61,42 @@
                                 <h3>Passeio</h3>
                             </div>
                             <p>Mais qualidade de vida para seu pet.</p>
-                            <img src="src/passeio.png" alt="">
+                            <img src="src/PASSEIO (2).png" alt="">
                         </div>
 
                         <div class="minicards">
                             <div class="title">
-                                <h3>Passeio</h3>
+                                <h3>Banho&Tosa</h3>
                             </div>
                             <p>Mais qualidade de vida para seu pet.</p>
-                            <img src="src/passeio.png" alt="">
+                            <img src="src/BANHOTOSA.png" alt="">
                         </div>
 
                         <div class="minicards">
                             <div class="title">
-                                <h3>Passeio</h3>
+                                <h3>Veterinario</h3>
                             </div>
                             <p>Mais qualidade de vida para seu pet.</p>
-                            <img src="src/passeio.png" alt="">
+                            <img src="src/VETERINARIO.png" alt="">
                         </div>
 
                         <div class="minicards">
                             <div class="title">
-                                <h3>Passeio</h3>
+                                <h3>Adestramento</h3>
                             </div>
                             <p>Mais qualidade de vida para seu pet.</p>
-                            <img src="src/passeio.png" alt="">
+                            <img src="src/ADESTRAMENTO.png" alt="">
                         </div>
 
                         <div class="minicards">
                             <div class="title">
-                                <h3>Passeio</h3>
+                                <h3>Creche</h3>
                             </div>
                             <p>Mais qualidade de vida para seu pet.</p>
-                            <img src="src/passeio.png" alt="">
+                            <img src="src/CRECHE.png" alt="">
                         </div>
 
-                        <div class="minicards">
-                            <div class="title">
-                                <h3>Passeio</h3>
-                            </div>
-                            <p>Mais qualidade de vida para seu pet.</p>
-                            <img src="src/passeio.png" alt="">
-                        </div>
-
+    
 
 
                     </div>
