--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 			</div>
 			<ul class="nav-list">
 				<li><a href="empresas1.html">Inicio</a></li>
-				<li><a href="#">teste</a></li>
+				<li><a href="principal.html">teste</a></li>
 				<li><a href="#">Ongs</a></li>
 				<li><a href="#">Ajuda</a></li>
 			</ul>
