--- a/principal.html
+++ b/principal.html
@@ -5,21 +5,12 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>BoxPets</title>
-
-
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
-		integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
-		integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
-		crossorigin="anonymous" referrerpolicy="no-referrer" />
-
+    
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
 
 <link rel="stylesheet" href="css/menu.css">
 	<link rel="stylesheet" href="css/footer.css">
-	<!--<link rel="stylesheet" href="css/index-barra-empresa.css"> está interferindo a barra menu-->
-
-
+	
 
 	<meta name="viewport content="width=device-width,initial-scale=1,minimum-scale=1">
 </head>
@@ -79,4 +70,79 @@
         <script src="js/menu.js"></script>
     </nav>
 </aside> 
+
+
+	<!--footer-->
+
+<footer>
+
+    <div id="footer_content">
+        <div id="footer_contacts">
+            <h1>logo</h1>
+            <p>Tudo aqui</p>
+
+            <div id="footer_midia">
+                <a href="#" class="footer-link" id="instagram">
+                    <i class="fa-brands fa-instagram"></i>
+                </a>
+                <a href="#" class="footer-link" id="facebook">
+                    <i class="fa-brands fa-facebook"></i>
+                </a>
+                <a href="#" class="footer-link" id="twitter">
+                    <i class="fa-brands fa-twitter"></i>
+                </a>
+            </div>
+        </div>
+        <ul class="footer-list">
+            <li>
+                <h3>Blog</h3>
+            </li>
+            <li>
+                <a href="#" class="footer-link">ajuda</a>
+            </li>
+            <li>
+                <a href="#" class="footer-link">Tech</a>
+            </li>
+            <li>
+                <a href="#" class="footer-link">blabla</a>
+            </li>
+        </ul>
+
+        <ul class="footer-list">
+            <li>
+                <h3>Produtos</h3>
+            </li>
+            <li>
+                <a href="#" class="footer-link">ajuda</a>
+            </li>
+
+            <li>
+                <a href="#" class="footer-link">Tech</a>
+            </li>
+
+            <li>
+                <a href="#" class="footer-link">blabla</a>
+            </li>
+        </ul>
+
+        <div id="footer_cadastro">
+            <h3>Cadastre-se</h3>
+            <p>
+                dhgfjsdhghfeudj wesagyfgayw swgdfyuwag ryfgyewgf egfd
+                eyfg yewfgyewgf efydgyegf ef
+            </p>
+
+            <div id="input_group">
+                <input type="email" id="email">
+                <button>
+                    <i class="fa-regular fa-envelope"></i>
+                </button>
+            </div>
+        </div>
+
+        <p>&#169
+            2023 all rights reserve</p>
+
+</footer>
 </body>
+</html>
