--- a/empresas1.html
+++ b/empresas1.html
@@ -14,7 +14,9 @@
     rel="stylesheet">
 
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">]
+
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
     integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
@@ -25,7 +27,7 @@
     crossorigin="anonymous"></script>
 
   <link rel="stylesheet" href="css/empresa1.css">
-<link rel="stylesheet" href="css/footer.css">
+  <link rel="stylesheet" href="css/footer.css">
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/nav-bar.css">
 
@@ -100,35 +102,117 @@
 
   <!--Serviços em destaques-->
 
-  <div class="card-group  grupo">
-    <div class="card" style="height: 100%;">
-      <img src="src/Banho e Tosa.png" class="card-img-top  propaganda" alt="...">
+  <div class="card-lidin" style="display: flex; width: 100%;">
+    <div class="card">
+      <img src="../src/oculos-e1581520670760.jpg" class="card-img-top" alt="...">
       <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content.
-          This content is a little bit longer.</p>
-        <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
+        <h5 class="card-title">Pets em movimento</h5>
+        <span <i class="bi bi-star-fill"></i> </span>
+        <span <i class="bi bi-star-fill"></i> </span>
+        <span <i class="bi bi-star-fill"></i> </span>
+        <span <i class="bi bi-star-fill"></i> </span>
+        <span <i class="bi bi-star-fill"></i> </span>
+        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
+          card's content.</p>
+        <a href="#" class="btn btn-primary">Go somewhere</a>
       </div>
     </div>
-    <div class="card" style="height: 100%;">
-      <img src="src/creche (1).png" class="card-img-top propaganda" alt="...">
+
+
+    <div class="card">
+      <img src="../src/oculos-e1581520670760.jpg" class="card-img-top " alt="...">
       <div class="card-body">
         <h5 class="card-title">Card title</h5>
-        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content.
-          This content is a little bit longer.</p>
-        <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
+        <span <i class="bi bi-star-fill"></i> </span>
+        <span <i class="bi bi-star-fill"></i> </span>
+        <span <i class="bi bi-star-fill"></i> </span>
+        <span <i class="bi bi-star-fill"></i> </span>
+        <span <i class="bi bi-star-fill"></i> </span>
+        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
+          card's content.</p>
+        <a href="#" class="btn btn-primary">Go somewhere</a>
       </div>
     </div>
-    <div class="card" style="height: 100%;">
-      <img src="src/ongs.png" class="card-img-top propaganda" alt="...">
+
+
+    <div class="card">
+      <img src="../src/oculos-e1581520670760.jpg" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title">Card title</h5>
-        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content.
-          This content is a little bit longer.</p>
-        <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
+        <span <i class="bi bi-star-fill"></i> </span>
+        <span <i class="bi bi-star-fill"></i> </span>
+        <span <i class="bi bi-star-fill"></i> </span>
+        <span <i class="bi bi-star-fill"></i> </span>
+        <span <i class="bi bi-star-fill"></i> </span>
+        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
+          card's content.</p>
+        <a href="#" class="btn btn-primary">Go somewhere</a>
       </div>
     </div>
+
+
+    <div class="card">
+      <img src="../src/oculos-e1581520670760.jpg" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Card title</h5>
+        <span <i class="bi bi-star-fill"></i> </span>
+        <span <i class="bi bi-star-fill"></i> </span>
+        <span <i class="bi bi-star-fill"></i> </span>
+        <span <i class="bi bi-star-fill"></i> </span>
+        <span <i class="bi bi-star-fill"></i> </span>
+        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
+          card's content.</p>
+        <a href="#" class="btn btn-primary">Go somewhere</a>
+      </div>
+    </div>
+
+
   </div>
+
+  <style>
+    * {
+      list-style: none;
+    }
+
+    .card-lidin {
+      gap: 2%;
+      padding: 35px;
+      margin-top: 3%;
+      justify-content: center;
+
+    }
+     .card-title {
+      width: 208px;
+     }
+
+
+
+
+
+    @media screen and (min-width: 601px) and (max-width: 769px) {
+      .card-lidin {
+        display: grid !important;
+        grid-template-columns: repeat(2, auto);
+        padding: 35px;
+        gap: 5%;
+      }
+    }
+
+    @media screen and (max-width: 600px) {
+      .card-lidin {
+        display: grid !important;
+        grid-template-columns: repeat(1, auto);
+        justify-content: center;
+        align-items: center;
+        margin: 10%;
+        gap: 3%;
+      }
+
+      .card-lidin .card img {
+        width: 100%;
+      }
+    }
+  </style>
   <!-- fim Serviços em destaques-->
 
   <!--comentarios-->
@@ -266,8 +350,8 @@
   </section>
   <!--fim de comentario-->
 
- 
-      <!--maps-->
+
+  <!--maps-->
   <div class="subpe">
     <!--maps-->
     <div class="maps">
@@ -286,76 +370,76 @@
     <!--fim do form-->
     <div class="form-body">
       <div class="row">
-          <div class="form-holder">
-              <div class="form-content">
-                  <div class="form-items">
-                      <h3>Register Today</h3>
-                      <p>Fill in the data below.</p>
-                      <form class="requires-validation" novalidate>
+        <div class="form-holder">
+          <div class="form-content">
+            <div class="form-items">
+              <h3>Register Today</h3>
+              <p>Fill in the data below.</p>
+              <form class="requires-validation" novalidate>
 
-                          <div class="col-md-12">
-                             <input class="form-control" type="text" name="name" placeholder="Full Name" required>
-                             <div class="valid-feedback">Username field is valid!</div>
-                             <div class="invalid-feedback">Username field cannot be blank!</div>
-                          </div>
+                <div class="col-md-12">
+                  <input class="form-control" type="text" name="name" placeholder="Full Name" required>
+                  <div class="valid-feedback">Username field is valid!</div>
+                  <div class="invalid-feedback">Username field cannot be blank!</div>
+                </div>
 
-                          <div class="col-md-12">
-                              <input class="form-control" type="email" name="email" placeholder="E-mail Address" required>
-                               <div class="valid-feedback">Email field is valid!</div>
-                               <div class="invalid-feedback">Email field cannot be blank!</div>
-                          </div>
+                <div class="col-md-12">
+                  <input class="form-control" type="email" name="email" placeholder="E-mail Address" required>
+                  <div class="valid-feedback">Email field is valid!</div>
+                  <div class="invalid-feedback">Email field cannot be blank!</div>
+                </div>
 
-                         <div class="col-md-12">
-                              <select class="form-select mt-3" required>
-                                    <option selected disabled value="">Position</option>
-                                    <option value="jweb">Junior Web Developer</option>
-                                    <option value="sweb">Senior Web Developer</option>
-                                    <option value="pmanager">Project Manager</option>
-                             </select>
-                              <div class="valid-feedback">You selected a position!</div>
-                              <div class="invalid-feedback">Please select a position!</div>
-                         </div>
-
-
-                         <div class="col-md-12">
-                            <input class="form-control" type="password" name="password" placeholder="Password" required>
-                             <div class="valid-feedback">Password field is valid!</div>
-                             <div class="invalid-feedback">Password field cannot be blank!</div>
-                         </div>
+                <div class="col-md-12">
+                  <select class="form-select mt-3" required>
+                    <option selected disabled value="">Position</option>
+                    <option value="jweb">Junior Web Developer</option>
+                    <option value="sweb">Senior Web Developer</option>
+                    <option value="pmanager">Project Manager</option>
+                  </select>
+                  <div class="valid-feedback">You selected a position!</div>
+                  <div class="invalid-feedback">Please select a position!</div>
+                </div>
 
 
-                         <div class="col-md-12 mt-3">
-                          <label class="mb-3 mr-1" for="gender">Gender: </label>
+                <div class="col-md-12">
+                  <input class="form-control" type="password" name="password" placeholder="Password" required>
+                  <div class="valid-feedback">Password field is valid!</div>
+                  <div class="invalid-feedback">Password field cannot be blank!</div>
+                </div>
 
-                          <input type="radio" class="btn-check" name="gender" id="male" autocomplete="off" required>
-                          <label class="btn btn-sm btn-outline-secondary" for="male">Male</label>
 
-                          <input type="radio" class="btn-check" name="gender" id="female" autocomplete="off" required>
-                          <label class="btn btn-sm btn-outline-secondary" for="female">Female</label>
+                <div class="col-md-12 mt-3">
+                  <label class="mb-3 mr-1" for="gender">Gender: </label>
 
-                          <input type="radio" class="btn-check" name="gender" id="secret" autocomplete="off" required>
-                          <label class="btn btn-sm btn-outline-secondary" for="secret">Secret</label>
-                             <div class="valid-feedback mv-up">You selected a gender!</div>
-                              <div class="invalid-feedback mv-up">Please select a gender!</div>
-                          </div>
+                  <input type="radio" class="btn-check" name="gender" id="male" autocomplete="off" required>
+                  <label class="btn btn-sm btn-outline-secondary" for="male">Male</label>
 
-                      <div class="form-check">
-                        <input class="form-check-input" type="checkbox" value="" id="invalidCheck" required>
-                        <label class="form-check-label">I confirm that all data are correct</label>
-                       <div class="invalid-feedback">Please confirm that the entered data are all correct!</div>
-                      </div>
-                
+                  <input type="radio" class="btn-check" name="gender" id="female" autocomplete="off" required>
+                  <label class="btn btn-sm btn-outline-secondary" for="female">Female</label>
 
-                          <div class="form-button mt-3">
-                              <button id="submit" type="submit" class="btn btn-primary">Register</button>
-                          </div>
-                      </form>
-                  </div>
-              </div>
+                  <input type="radio" class="btn-check" name="gender" id="secret" autocomplete="off" required>
+                  <label class="btn btn-sm btn-outline-secondary" for="secret">Secret</label>
+                  <div class="valid-feedback mv-up">You selected a gender!</div>
+                  <div class="invalid-feedback mv-up">Please select a gender!</div>
+                </div>
+
+                <div class="form-check">
+                  <input class="form-check-input" type="checkbox" value="" id="invalidCheck" required>
+                  <label class="form-check-label">I confirm that all data are correct</label>
+                  <div class="invalid-feedback">Please confirm that the entered data are all correct!</div>
+                </div>
+
+
+                <div class="form-button mt-3">
+                  <button id="submit" type="submit" class="btn btn-primary">Register</button>
+                </div>
+              </form>
+            </div>
           </div>
+        </div>
       </div>
+    </div>
   </div>
-</div>
 
 
 
@@ -426,18 +510,18 @@
             <i class="fa-regular fa-envelope"></i>
           </button>
         </div>
-     
-
-      <p>&#169
-        2023 all rights reserve</p>
 
 
+        <p>&#169
+          2023 all rights reserve</p>
 
 
-      <!-- fim do footer-->
 
 
-      <script src="js/mobile-navbar.js"></script>
+        <!-- fim do footer-->
+
+
+        <script src="js/mobile-navbar.js"></script>
 </body>
 
 </html>
