--- a/principal.html
+++ b/principal.html
@@ -9,13 +9,13 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
 
 <link rel="stylesheet" href="css/menu.css">
-	<link rel="stylesheet" href="css/footer.css">
+	<link rel="stylesheet" href="css/footer-principal.css">
+    <link rel="stylesheet" href="css/principal.css">
 	
 
 	<meta name="viewport content="width=device-width,initial-scale=1,minimum-scale=1">
 </head>
 <body>
-    
 
 <aside>
     <nav class="menu-lateral">
@@ -70,6 +70,95 @@
         <script src="js/menu.js"></script>
     </nav>
 </aside> 
+<!--Bemvindo-->
+
+
+
+<!--fim Bemvindo-->
+
+
+<!--serviços-->
+<section>
+    <div class="container-fluid">
+
+        <div class="card">
+            <a href="servico.html">
+            <div class="content">
+                <div class="imgBx">
+                    <img src="src/BANHOTOSA.png">
+                </div>
+                <div class="contentBx">
+                    <h3>Banho&tosa<br><span>Os melhores serviços</span></h3>
+                </div>
+            </div>
+        </a>
+        </div>
+
+        <div class="card">
+            <div class="content">
+                <div class="imgBx">
+                    <img src="src/VETERINARIO.png">
+                </div>
+                <div class="contentBx">
+                    <h3>Veterinario<br><span>Happy Birthday</span></h3>
+                </div>
+            </div>
+        </div>
+
+        <div class="card">
+            <div class="content">
+                <div class="imgBx">
+                    <img src="src/CRECHE.png">
+                </div>
+                <div class="contentBx">
+                    <h3>Creche<br><span>Happy Birthday</span></h3>
+                </div>
+            </div>
+            </div>
+
+        <div class="card">
+            <div class="content">
+                <div class="imgBx">
+                    <img src="src/PASSEIO (2).png">
+                </div>
+                <div class="contentBx">
+                    <h3>Veterinario<br><span>Happy Birthday</span></h3>
+                </div>
+            </div>
+            </div>
+
+        <div class="card">
+            <div class="content">
+                <div class="imgBx">
+                    <img src="src/ADESTRAMENTO.png">
+                </div>
+                <div class="contentBx">
+                    <h3>Veterinario<br><span>Happy Birthday</span></h3>
+                </div>
+            </div>
+        
+        </div>
+    </div>
+</section>
+
+
+<!--fim serviços-->
+
+<!--carterinha-->
+<!--fim da carterinha -->
+
+<!--agenda-->
+<!--fim da agenda-->
+
+<!--empresas-->
+<!--fim das empresas-->
+
+<!--animais para adoção-->
+<!--fim de animais para adoção-->
+
+
+
+
 
 
 	<!--footer-->
