--- a/principal.html
+++ b/principal.html
@@ -7,10 +7,12 @@
 	<title>BoxPets</title>
     
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 
 <link rel="stylesheet" href="css/menu.css">
 	<link rel="stylesheet" href="css/footer-principal.css">
     <link rel="stylesheet" href="css/principal.css">
+
 	
 
 	<meta name="viewport content="width=device-width,initial-scale=1,minimum-scale=1">
@@ -145,6 +147,77 @@
 <!--fim serviços-->
 
 <!--carterinha-->
+ 
+  
+<div class="container py-4">
+	<div class="row">
+		<div class="col-md-12 text-center">
+			<div class="lc-block mb-4"><span editable="inline" class="small mt-4 d-block">LOREM IPSUM</span>
+				<h2 editable="inline" class="display-2 mb-0"><b>Pricing</b></h2>
+				<p editable="inline"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc et metus id<br> ligula malesuada placerat sit amet quis enim.</p>
+			</div><!-- /lc-block -->
+		</div>
+	</div>
+	<div class="row mt-4">
+		<div class="text-center col-md-6 py-5 bg-light text-dark">
+			<div class="lc-block">
+				<div editable="rich">
+
+					<h2><strong>Basic</strong></h2>
+
+					<p><em>1 USER</em></p>
+				</div>
+			</div>
+			<div class="lc-block">
+				<div editable="rich">
+
+					<h2 class="display-3">$59</h2>
+					<p>/month</p>
+				</div>
+			</div>
+			<div class="lc-block px-4 mb-4">
+				<div editable="rich">
+
+					<p>&nbsp;Aenean vel nisi in ipsum congue fermentum et ut arcu. Proin leo diam,
+						vulputate eu tellus ac, mattis cursus nunc.</p>
+				</div>
+			</div>
+			<div class="lc-block">
+				<a class="btn btn-outline-primary" href="#" role="button">Buy Now</a>
+			</div><!-- /lc-block -->
+		</div><!-- /col -->
+		<div class="text-center col-md-6 py-5 shadow-lg">
+			<div class="lc-block">
+				<div editable="rich">
+
+					<h2><strong>Business</strong></h2>
+
+					<p><em>100 USERs</em></p>
+				</div>
+			</div>
+			<div class="lc-block">
+				<div editable="rich">
+
+					<h2 class="display-3">$199</h2>
+					<p>/month</p>
+				</div>
+			</div>
+			<div class="lc-block px-4 mb-4">
+				<div editable="rich">
+
+					<p>&nbsp;Aenean vel nisi in ipsum congue fermentum et ut arcu. Proin leo diam,
+						vulputate eu tellus ac, mattis cursus nunc.</p>
+				</div>
+			</div>
+			<div class="lc-block">
+				<a class="btn btn-outline-primary" href="#" role="button">Buy Now</a>
+			</div><!-- /lc-block -->
+		</div><!-- /col -->
+	</div>
+</div>
+ 
+ 
+  
 <!--fim da carterinha -->
 
 <!--agenda-->
