--- a/servico.html
+++ b/servico.html
@@ -182,6 +182,8 @@
 
     <!-- fim do footer-->
 
+    <script src="js/menu.js"></script>
+    <script src="js/mobile-navbar.js"></script>
 
 </body>
 
