--- a/empresas1.html
+++ b/empresas1.html
@@ -357,7 +357,7 @@
     <div class="maps">
       <iframe
         src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d29265.466186122372!2d-46.88551734753417!3d-23.52590975906644!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1spt-BR!2sbr!4v1697601337890!5m2!1spt-BR!2sbr"
-        width="10000" height="450" style="border:0; padding: 2%;" allowfullscreen="" loading="lazy"
+        width="10000" height="400" style="border:0; padding: 2%;" allowfullscreen="" loading="lazy"
         referrerpolicy="no-referrer-when-downgrade">
       </iframe>
     </div>
@@ -367,7 +367,7 @@
 
 
 
-    <!--fim do form-->
+    <!--fim do form
     <div class="form-body">
       <div class="row">
         <div class="form-holder">
@@ -439,7 +439,7 @@
         </div>
       </div>
     </div>
-  </div>
+  </div>-->
 
 
 
