--- a/principal.html
+++ b/principal.html
@@ -152,61 +152,52 @@
 <div class="container py-4">
 	<div class="row">
 		<div class="col-md-12 text-center">
-			<div class="lc-block mb-4"><span editable="inline" class="small mt-4 d-block">LOREM IPSUM</span>
-				<h2 editable="inline" class="display-2 mb-0"><b>Pricing</b></h2>
-				<p editable="inline"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc et metus id<br> ligula malesuada placerat sit amet quis enim.</p>
-			</div><!-- /lc-block -->
+			<div class="lc-block mb-4"><span editable="inline" class="small mt-4 d-block">TERMINE DE CONFIGURAR</span>
+			
 		</div>
 	</div>
-	<div class="row mt-4">
+	<div class="row mt-4 mb-4">
 		<div class="text-center col-md-6 py-5 bg-light text-dark">
 			<div class="lc-block">
 				<div editable="rich">
 
-					<h2><strong>Basic</strong></h2>
+					<h2><strong>Histórico</strong></h2>
 
-					<p><em>1 USER</em></p>
+					<p><em>Agende seu primeiro serviço</em></p>
 				</div>
 			</div>
 			<div class="lc-block">
 				<div editable="rich">
-
-					<h2 class="display-3">$59</h2>
-					<p>/month</p>
 				</div>
 			</div>
 			<div class="lc-block px-4 mb-4">
 				<div editable="rich">
 
-					<p>&nbsp;Aenean vel nisi in ipsum congue fermentum et ut arcu. Proin leo diam,
-						vulputate eu tellus ac, mattis cursus nunc.</p>
+					<p>&nbsp;VocÊ naão tem nenhum serviço agendado, quando você agendar um serviço irá aparecer aqui.</p>
 				</div>
 			</div>
 			<div class="lc-block">
-				<a class="btn btn-outline-primary" href="#" role="button">Buy Now</a>
+				<a class="btn btn-outline-primary" href="#" role="button">Agendar</a>
 			</div><!-- /lc-block -->
 		</div><!-- /col -->
 		<div class="text-center col-md-6 py-5 shadow-lg">
 			<div class="lc-block">
 				<div editable="rich">
 
-					<h2><strong>Business</strong></h2>
+					<h2><strong>Carterinha</strong></h2>
 
-					<p><em>100 USERs</em></p>
+					<p><em>Faça a carterinha pet do seu pet</em></p>
 				</div>
 			</div>
 			<div class="lc-block">
 				<div editable="rich">
 
-					<h2 class="display-3">$199</h2>
-					<p>/month</p>
 				</div>
 			</div>
 			<div class="lc-block px-4 mb-4">
 				<div editable="rich">
 
-					<p>&nbsp;Aenean vel nisi in ipsum congue fermentum et ut arcu. Proin leo diam,
-						vulputate eu tellus ac, mattis cursus nunc.</p>
+					<p>&nbsp;Para um melhor experiencia para você e para seu pet, coloque informações necessarias dele para um melhor atendimento .</p>
 				</div>
 			</div>
 			<div class="lc-block">
