--- a/index.html
+++ b/index.html
@@ -150,20 +150,18 @@
 						<div class="lc-block">
 							<div editable="rich">
 
-								<img src="https://is1-ssl.mzstatic.com/image/thumb/Purple116/v4/77/6f/b9/776fb98c-06b5-07b5-76a4-b12a71aa24c7/AppIcon-0-0-1x_U007emarketing-0-0-0-7-0-0-sRGB-0-0-0-GLES2_U002c0-512MB-85-220-0-0.png/1200x600wa.png"
+								<img src="https://is1-ssl.mzstatic.com/image/thumb/Purple116/v4/77/6f/b9/776fb98c-06b5-07b5-76a4-b12a71aa24c7/AppIcon-0-0-1x_U007emarketing-0-0-0-7-0-0-sRGB-0-0-0-GLES2_U002c0-512MB-85-220-0-0.png/1200x600wa.png" style="width: 40%;" 
 									alt="">
-								<p>month</p>
 							</div>
 						</div>
 						<div class="lc-block px-4 mb-4">
 							<div editable="rich">
 
-								<p>&nbsp;Aenean vel nisi in ipsum congue fermentum et ut arcu. Proin leo diam,
-									vulputate eu tellus ac, mattis cursus nunc.</p>
+								<p>&nbsp;Facil para você e para nós, coloque as informações dos seus pets na carterinha para qe possemos dar o melhor serviço para você </p>
 							</div>
 						</div>
 						<div class="lc-block">
-							<a class="btn btn-outline-primary" href="#" role="button">Buy Now</a>
+							<a class="btn btn-outline-primary" href="#" role="button">Estilezar</a>
 						</div><!-- /lc-block -->
 					</div><!-- /col -->
 					<div class="text-center col-md-6 py-5 shadow-lg">
@@ -178,7 +176,7 @@
 						<div class="lc-block">
 							<div editable="rich">
 
-								<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQoTIdO4x59X9xRKzcVHSNb0sHycCcgRcx-uvaBNntC4w&s"
+								<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQoTIdO4x59X9xRKzcVHSNb0sHycCcgRcx-uvaBNntC4w&s" style="width: 18%;"
 									alt="">
 								<p>month</p>
 							</div>
@@ -186,12 +184,11 @@
 						<div class="lc-block px-4 mb-4">
 							<div editable="rich">
 
-								<p>&nbsp;Aenean vel nisi in ipsum congue fermentum et ut arcu. Proin leo diam,
-									vulputate eu tellus ac, mattis cursus nunc.</p>
+								<p>&nbsp;Agende seus serviços de um jeito facil e pratico, seja lembrado dos seus serviços e relembrado quando precisar.</p>
 							</div>
 						</div>
 						<div class="lc-block">
-							<a class="btn btn-outline-primary" href="#" role="button">Buy Now</a>
+							<a class="btn btn-outline-primary" href="#" role="button">2iJmYyAjY6InYu02bj5CbvJGQvdmch1WYj91bpF2Y6MDO3QzN2QjNxIjOnVGcq5SOzETNzADOwcjRyUCOwcjRyUyMyEjMGJTJzUjMzEzXtUTMt8VbvNmLyBXbtkmRyUiRyUSQzUycwRHdopTM</a>
 						</div><!-- /lc-block -->
 					</div><!-- /col -->
 				</div>
@@ -205,7 +202,7 @@
 			<div class="p-5 text-center bg-body-tertiary rounded-3" style="margin-top: 4rem;">
 				<!--nao reconhece o style-->
 
-				<img src="https://img.freepik.com/free-photo/cute-pet-collage-isolated_23-2150007407.jpg?w=740&t=st=1698763025~exp=1698763625~hmac=e9cee1b5bc8f63f88b3c7ccdab95894b0676b55630cd0cc308982e30d6749b5f" style="width: 100%;"
+				<img src="https://img.freepik.com/free-photo/cute-pet-collage-isolated_23-2150007407.jpg?w=740&t=st=1698763025~exp=1698763625~hmac=e9cee1b5bc8f63f88b3c7ccdab95894b0676b55630cd0cc308982e30d6749b5f" style="width: 20%;"
 					alt="">
 				<h1 class="text-body-emphasis">Jumbotron with icon</h1><!--Titulo-->
 				<p class="col-lg-8 mx-auto fs-5 text-muted">
