--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
 			</div>
 			<ul class="nav-list">
 				<li><a href="#">Inicio</a></li>
-				<li><a href="LOGIN/login.html">Login</a></li>
 				<li><a href="#">Ongs</a></li>
 				<li><a href="#">Ajuda</a></li>
+				<li><a href="LOGIN/login.html">Login</a></li>
 			</ul>
 		</nav>
 	</header>
@@ -188,7 +188,7 @@
 							</div>
 						</div>
 						<div class="lc-block">
-							<a class="btn btn-outline-primary" href="#" role="button">2iJmYyAjY6InYu02bj5CbvJGQvdmch1WYj91bpF2Y6MDO3QzN2QjNxIjOnVGcq5SOzETNzADOwcjRyUCOwcjRyUyMyEjMGJTJzUjMzEzXtUTMt8VbvNmLyBXbtkmRyUiRyUSQzUycwRHdopTM</a>
+							<a class="btn btn-outline-primary" href="#" role="button">Agendar</a>
 						</div><!-- /lc-block -->
 					</div><!-- /col -->
 				</div>
