--- a/empresas1.html
+++ b/empresas1.html
@@ -48,10 +48,10 @@
 
       </div>
       <ul class="nav-list">
-        <li><a href="#">Inicio</a></li>
-        <li><a href="#">Empresa</a></li>
-        <li><a href="#">Ongs</a></li>
-        <li><a href="#">Ajuda</a></li>
+      	<li><a href="index.html">Inicio</a></li>
+				<li><a href="#">Ongs</a></li>
+				<li><a href="#">Ajuda</a></li>
+				<li><a href="LOGIN/login.html">Login</a></li>
       </ul>
     </nav>
   </header>
