--- a/servico.html
+++ b/servico.html
@@ -33,10 +33,10 @@
 
             </div>
             <ul class="nav-list">
-                <li><a href="empresas1.html">Inicio</a></li>
-                <li><a href="#">teste</a></li>
-                <li><a href="#">Ongs</a></li>
-                <li><a href="#">Ajuda</a></li>
+                <li><a href="index.html">Inicio</a></li>
+				<li><a href="#">Ongs</a></li>
+				<li><a href="#">Ajuda</a></li>
+				<li><a href="LOGIN/login.html">Login</a></li>
             </ul>
         </nav>
     </header>
@@ -55,7 +55,7 @@
                 </div>
                 <div class="right">
                     <h2>Agenda seu Serviço.</h2>
-                    <div class="cards">
+                    <div class="cards"><a href="empresas1.html">
                         <div class="minicards">
                             <div class="title">
                                 <h3>Passeio</h3>
@@ -104,7 +104,7 @@
 
 
                 </div>
-            </div>
+            </div></a>
         </div>
 
     </section>
