--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
 	<header>
 		<nav>
-			<a class="logo" href="index.html">BoxPets</a>
+			<a class="logo" href="index.html"><img src="/src/logo-box-pet.png" alt="" srcset=""></a>
 			<div class="mobile-menu" data-bs-toggle="offcanvas" href="#menu" role="button"
 				aria-controls="offcanvasExample">
 				<div class="line1"></div>
@@ -73,7 +73,7 @@
 		<section>
 			<div class="container-fluid">
 				<div class="card">
-					<a href="servico.html">
+					<a href="servico.html" style="text-decoration: none;">
 						<div class="content">
 							<div class="imgBx">
 								<img src="src/BANHOTOSA.png">
@@ -85,50 +85,54 @@
 					</a>
 				</div>
 				<div class="card">
-					<div class="content">
-						<div class="imgBx">
-							<img src="src/VETERINARIO.png">
+					<a href="servico.html" style="text-decoration: none;">
+						<div class="content">
+							<div class="imgBx">
+								<img src="src/VETERINARIO.png">
+							</div>
+							<div class="contentBx">
+								<h3>Veterinario<br><span>Happy Birthday</span></h3>
+							</div>
 						</div>
-						<div class="contentBx">
-							<h3>Veterinario<br><span>Happy Birthday</span></h3>
-						</div>
-					</div>
-
+					</a>
 				</div>
 				<div class="card">
-					<div class="content">
-						<div class="imgBx">
-							<img src="src/CRECHE.png">
+					<a href="servico.html" style="text-decoration: none;">
+						<div class="content">
+							<div class="imgBx">
+								<img src="src/CRECHE.png">
+							</div>
+							<div class="contentBx">
+								<h3>Creche<br><span>Happy Birthday</span></h3>
+							</div>
 						</div>
-						<div class="contentBx">
-							<h3>Creche<br><span>Happy Birthday</span></h3>
-						</div>
-					</div>
-
-				</div>
-
-				<div class="card">
-					<div class="content">
-						<div class="imgBx">
-							<img src="src/PASSEIO (2).png">
-						</div>
-						<div class="contentBx">
-							<h3>Veterinario<br><span>Happy Birthday</span></h3>
-						</div>
-					</div>
-
+					</a>
 				</div>
 
 				<div class="card">
-					<div class="content">
-						<div class="imgBx">
-							<img src="src/ADESTRAMENTO.png">
+					<a href="servico.html" style="text-decoration: none;">
+						<div class="content">
+							<div class="imgBx">
+								<img src="src/PASSEIO (2).png">
+							</div>
+							<div class="contentBx">
+								<h3>Veterinario<br><span>Happy Birthday</span></h3>
+							</div>
 						</div>
-						<div class="contentBx">
-							<h3>Veterinario<br><span>Happy Birthday</span></h3>
-						</div>
-					</div>
+					</a>
+				</div>
 
+				<div class="card">
+					<a href="servico.html" style="text-decoration: none;">
+						<div class="content">
+							<div class="imgBx">
+								<img src="src/ADESTRAMENTO.png">
+							</div>
+							<div class="contentBx">
+								<h3>Veterinario<br><span>Happy Birthday</span></h3>
+							</div>
+						</div>
+					</a>
 				</div>
 			</div>
 		</section>
@@ -150,14 +154,15 @@
 						<div class="lc-block">
 							<div editable="rich">
 
-								<img src="https://is1-ssl.mzstatic.com/image/thumb/Purple116/v4/77/6f/b9/776fb98c-06b5-07b5-76a4-b12a71aa24c7/AppIcon-0-0-1x_U007emarketing-0-0-0-7-0-0-sRGB-0-0-0-GLES2_U002c0-512MB-85-220-0-0.png/1200x600wa.png" style="width: 40%;" 
-									alt="">
+								<img src="https://is1-ssl.mzstatic.com/image/thumb/Purple116/v4/77/6f/b9/776fb98c-06b5-07b5-76a4-b12a71aa24c7/AppIcon-0-0-1x_U007emarketing-0-0-0-7-0-0-sRGB-0-0-0-GLES2_U002c0-512MB-85-220-0-0.png/1200x600wa.png"
+									style="width: 40%;" alt="">
 							</div>
 						</div>
 						<div class="lc-block px-4 mb-4">
 							<div editable="rich">
 
-								<p>&nbsp;Facil para você e para nós, coloque as informações dos seus pets na carterinha para qe possemos dar o melhor serviço para você </p>
+								<p>&nbsp;Facil para você e para nós, coloque as informações dos seus pets na carterinha
+									para qe possemos dar o melhor serviço para você </p>
 							</div>
 						</div>
 						<div class="lc-block">
@@ -176,15 +181,16 @@
 						<div class="lc-block">
 							<div editable="rich">
 
-								<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQoTIdO4x59X9xRKzcVHSNb0sHycCcgRcx-uvaBNntC4w&s" style="width: 18%;"
-									alt="">
+								<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQoTIdO4x59X9xRKzcVHSNb0sHycCcgRcx-uvaBNntC4w&s"
+									style="width: 18%;" alt="">
 								<p>month</p>
 							</div>
 						</div>
 						<div class="lc-block px-4 mb-4">
 							<div editable="rich">
 
-								<p>&nbsp;Agende seus serviços de um jeito facil e pratico, seja lembrado dos seus serviços e relembrado quando precisar.</p>
+								<p>&nbsp;Agende seus serviços de um jeito facil e pratico, seja lembrado dos seus
+									serviços e relembrado quando precisar.</p>
 							</div>
 						</div>
 						<div class="lc-block">
@@ -202,14 +208,16 @@
 			<div class="p-5 text-center bg-body-tertiary rounded-3" style="margin-top: 4rem;">
 				<!--nao reconhece o style-->
 
-				<img src="https://img.freepik.com/free-photo/cute-pet-collage-isolated_23-2150007407.jpg?w=740&t=st=1698763025~exp=1698763625~hmac=e9cee1b5bc8f63f88b3c7ccdab95894b0676b55630cd0cc308982e30d6749b5f" style="width: 20%;"
-					alt="">
-				<h1 class="text-body-emphasis">Jumbotron with icon</h1><!--Titulo-->
+				<img src="https://img.freepik.com/free-photo/cute-pet-collage-isolated_23-2150007407.jpg?w=740&t=st=1698763025~exp=1698763625~hmac=e9cee1b5bc8f63f88b3c7ccdab95894b0676b55630cd0cc308982e30d6749b5f"
+					style="width: 20%;" alt="">
+				<h1 class="text-body-emphasis">Jumbotron with icon</h1>
+				<!--Titulo-->
 				<p class="col-lg-8 mx-auto fs-5 text-muted">
 
 					" This is a custom jumbotron featuring an SVG image at the top, some longer text that wraps early
 					thanks to a responsive
-					class, and a customized call to action." <!--texto-->
+					class, and a customized call to action."
+					<!--texto-->
 
 				</p>
 				<!--btn1-->
