--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 				<li><a href="#">Inicio</a></li>
 				<li><a href="#">Ongs</a></li>
 				<li><a href="#">Ajuda</a></li>
-				<li><a href="LOGIN/login.html">Login</a></li>
+				<li><a href="login.html">Login</a></li>
 			</ul>
 		</nav>
 	</header>
