--- a/login.html
+++ b/login.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <script src="https://kit.fontawesome.com/64d58efce2.js" crossorigin="anonymous"></script>
-  <link rel="stylesheet" href="login-style.css" />
+  <link rel="stylesheet" href="LOGIN/login-style.css" />
   <title>Login/Cadastro</title>
 </head>
 
@@ -29,7 +29,7 @@
               pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z])(?=.*[!@#$%&*]).{8,}" />
 
           </div>
-          <a href="/principal.html"><input value="Login" class="btn solid"/></a>
+          <a href="principal.html"><input value="Login" class="btn solid"/></a>
 
           <p class="social-text">Siga nossas redes sociais</p>
 
