--- a/servico.html
+++ b/servico.html
@@ -36,7 +36,7 @@
                 <li><a href="index.html">Inicio</a></li>
 				<li><a href="#">Ongs</a></li>
 				<li><a href="#">Ajuda</a></li>
-				<li><a href="LOGIN/login.html">Login</a></li>
+				<li><a href="login.html">Login</a></li>
             </ul>
         </nav>
     </header>
