--- a/login.html
+++ b/login.html
@@ -144,7 +144,7 @@
             Cadastrar
           </button>
         </div>
-        <img src="img/log.svg" class="image" alt="" />
+        <img src="LOGIN/img/log.svg" class="image" alt="" />
       </div>
       <div class="panel right-panel">
         <div class="content">
@@ -156,7 +156,7 @@
             Entrar
           </button>
         </div>
-        <img src="img/register.svg" class="image" alt="" />
+        <img src="LOGIN/img/register.svg" class="image" alt="" />
       </div>
     </div>
   </div>
