--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 								<img src="src/VETERINARIO.png">
 							</div>
 							<div class="contentBx">
-								<h3>Veterinario<br><span>Happy Birthday</span></h3>
+								<h3>Veterinario<br><span>Seviços</span></h3>
 							</div>
 						</div>
 					</a>
@@ -103,7 +103,7 @@
 								<img src="src/CRECHE.png">
 							</div>
 							<div class="contentBx">
-								<h3>Creche<br><span>Happy Birthday</span></h3>
+								<h3>Creche<br><span>Seviços</span></h3>
 							</div>
 						</div>
 					</a>
@@ -116,7 +116,7 @@
 								<img src="src/PASSEIO (2).png">
 							</div>
 							<div class="contentBx">
-								<h3>Veterinario<br><span>Happy Birthday</span></h3>
+								<h3>Passeio<br><span>Seviços</span></h3>
 							</div>
 						</div>
 					</a>
@@ -129,7 +129,7 @@
 								<img src="src/ADESTRAMENTO.png">
 							</div>
 							<div class="contentBx">
-								<h3>Veterinario<br><span>Happy Birthday</span></h3>
+								<h3>Adestramento<br><span>Seviços</span></h3>
 							</div>
 						</div>
 					</a>
