--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
 
 				<img src="https://img.freepik.com/free-photo/cute-pet-collage-isolated_23-2150007407.jpg?w=740&t=st=1698763025~exp=1698763625~hmac=e9cee1b5bc8f63f88b3c7ccdab95894b0676b55630cd0cc308982e30d6749b5f"
 					style="width: 20%;" alt="">
-				<h1 class="text-body-emphasis">Jumbotron with icon</h1>
+				<h1 class="text-body-emphasis">Adota Pets</h1>
 				<!--Titulo-->
 				<p class="col-lg-8 mx-auto fs-5 text-muted">
 
@@ -224,13 +224,13 @@
 				<div class="d-inline-flex gap-2 mb-5">
 					<button class="d-inline-flex align-items-center btn btn-primary btn-lg px-4 rounded-pill"
 						type="button">
-						Call to action
+						saiba mais
 						<svg class="bi ms-2" width="24" height="24">
 							<use xlink:href="#arrow-right-short"></use>
 						</svg>
 					</button>
 					<!--fim btn1-->
-					<button class="btn btn-outline-secondary btn-lg px-4 rounded-pill" type="button"> Secondary link
+					<button class="btn btn-outline-secondary btn-lg px-4 rounded-pill" type="button"> sou ongs
 					</button>
 				</div>
 			</div>
