--- a/index.html
+++ b/index.html
@@ -224,13 +224,13 @@
 				<div class="d-inline-flex gap-2 mb-5">
 					<button class="d-inline-flex align-items-center btn btn-primary btn-lg px-4 rounded-pill"
 						type="button">
-						saiba mais
+						Saiba Mais
 						<svg class="bi ms-2" width="24" height="24">
 							<use xlink:href="#arrow-right-short"></use>
 						</svg>
 					</button>
 					<!--fim btn1-->
-					<button class="btn btn-outline-secondary btn-lg px-4 rounded-pill" type="button"> sou ongs
+					<button class="btn btn-outline-secondary btn-lg px-4 rounded-pill" type="button">Sou Ongs
 					</button>
 				</div>
 			</div>
