--- a/login.html
+++ b/login.html
@@ -81,7 +81,7 @@
 
           <div id="messageDiv"></div>
           <button id="loginButton" style="display: none">Ir para a tela de login</button>
-          <input type="submit" class="btn" value="Cadastrar" onclick="saveData()" />
+          <input type="submit" class="btn" value="Cadastrar" />
 
           <!-- REDES SOCIAIS -->
 
@@ -161,7 +161,7 @@
     </div>
   </div>
 
-  <script src="login.js"></script>
+  <script src="LOGIN/login.js"></script>
 </body>
 
 </html>
